Correct z-index and positioning...

--- a/templates/Evo/themes/base/less/base.less
+++ b/templates/Evo/themes/base/less/base.less
@@ -1962,7 +1962,7 @@ fieldset {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 4;
+    z-index: @zindex-navbar - 10;
     background-color: rgba(0, 0, 0, 0.3);
 }
 
@@ -2487,7 +2487,6 @@ div#add-to-cart {
 //for wrapper
 .twitter-typeahead {
     width: 100%;
-    float: left;
 
     .input-group & {
         //overwrite `display:inline-block` style
